@@ -1,9 +1,16 @@
 {
+    // How to enable more verbose logging in SOGo
+    // http://www.sogo.nu/nc/support/faq/article/how-to-enable-more-verbose-logging-in-sogo.html
+    //ImapDebugEnabled = YES;
+    //LDAPDebugEnabled = YES;
+    //MySQL4DebugEnabled = YES;
+    //PGDebugEnabled = YES;
+
     WOPort = PH_SOGO_BIND_ADDRESS:PH_SOGO_BIND_PORT;
 
-    SOGoProfileURL = "mysql://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_TABLE_USER_PROFILE";
-    OCSFolderInfoURL = "mysql://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_TABLE_FOLDER_INFO";
-    OCSSessionsFolderURL = "mysql://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_TABLE_SESSIONS_FOLDER";
+    SOGoProfileURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_TABLE_USER_PROFILE";
+    OCSFolderInfoURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_TABLE_FOLDER_INFO";
+    OCSSessionsFolderURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_TABLE_SESSIONS_FOLDER";
 
     // Default language in the web interface
     SOGoLanguage = English;
@@ -16,7 +23,7 @@
 
     // Enable email-based alarms on events and tasks.
     SOGoEnableEMailAlarms = YES;
-    OCSEMailAlarmsFolderURL = "mysql://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_TABLE_ALARMS";
+    OCSEMailAlarmsFolderURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_TABLE_ALARMS";
 
     // IMAP server
     SOGoIMAPServer = "imaps://PH_IMAP_SERVER:143/?tls=YES";
@@ -57,9 +64,10 @@
         {
             type = sql;
             id = directory;
-            viewURL = "mysql://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_AUTH_VIEW";
+            viewURL = "PH_SOGO_DB_TYPE://PH_SOGO_DB_USER:PH_SOGO_DB_PASSWD@PH_SQL_SERVER:PH_SQL_SERVER_PORT/PH_SOGO_DB_NAME/PH_SOGO_DB_AUTH_VIEW";
             canAuthenticate = YES;
             isAddressBook = YES;
+            displayName = "Global Address Book";
             userPasswordAlgorithm = md5;
             prependPasswordScheme = YES;
         }
